2003-08-08  Wensong Zhang  <wensong@purplecomm.com>

	* acinclude.m4: fixed not to add -I/usr/include into CPPFLAGS and
	not to add -L/usr/lib into LDFLAGS, which avoid a lot of compiling
	warnings.

	* configure.in: most stuff of configure.ac is merged in the
	configure.in. configure.ac should be of no use now.

	* acinclude.m4: fixed to look up contrib/ares automatically when
	the --with-ares is specified.

	* Makefile.am (EXTRA_DIST): fixed to use the right directory.