@@ -1,2 +1,6 @@
+AUTOMAKE_OPTIONS = foreign
+
 SUBDIRS = resiprocate
-EXTRA_DIST = contrib/ares
+EXTRA_DIST = contrib/ares certs README.windows ReSIProcate.sln	\
+		SipIMP SipIMP-Qt SipIMPSetup
+
